--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  <h1>Lasagna</h1>
-    <img src="./Lasagna.jpg"/>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+  </head>
+  <body>
+    <h1>Lasagna</h1>
+    <img src="./Lasagna.jpg" />
     <ul>
       <li>Meat</li>
       <li>Onion and Garlic</li>
@@ -18,6 +18,7 @@
       <li>Lasagna Noodles</li>
       <li>Cheeses</li>
       <li>Eggs</li>
+    </ul>
     <ol>
       <li>Make the meat sauce.</li>
       <li>Cook the noodles.</li>
@@ -26,5 +27,5 @@
       <li>Cover with foil and bake.</li>
       <li>Let the lasagna rest before serving.</li>
     </ol>
-</body>
+  </body>
 </html>
