wrap recipe links in ul element

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/pizza-bagel.html">Pizza Bagel</a>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <a href="./recipes/chicken-wrap.html">Chicken Wrap</a>
+    <ul>
+      <li><a href="./recipes/pizza-bagel.html">Pizza Bagel</a></li>
+      <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+      <li><a href="./recipes/chicken-wrap.html">Chicken Wrap</a></li>
+    </ul>
   </body>
 </html>
