Add description to image and title for lists

--- a/recipes/chicken-wrap.html
+++ b/recipes/chicken-wrap.html
@@ -9,6 +9,9 @@
   <body>
     <h1>Chicken Wrap</h1>
     <img src="./Chicken-Wrap.jpg"/>
+    <h3>One of my favorite high time snacks!</h3>
+    <p>You ever wanted something so great? Look no further! The chicken wrap is here!</p>
+    <h4>Ingredients</h4>
     <ul>
       <li>Chicken Patty or Shredded Chicken</li>
       <li>Spinach</li>
@@ -17,6 +20,7 @@
       <li>Cucumber</li>
       <li>Your choice of condiment</li>
     <ol>
+      <h4>Recipe Instructions</h4>
       <li>Steam or warm up your tortilla, assuming your meat is already warmed up</li>
       <li>After steaming your tortilla place it down and add your condiment choice to it</li>
       <li>Next add the vegetables</li>
