--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -9,6 +9,12 @@
   <body>
     <h1>Lasagna</h1>
     <img src="./Lasagna.jpg" />
+    <h3>Oh muh guh! Its a cheesiness that keeps cheesin!</h3>
+    <p>
+      Do you like cheese? DO YOU LIKE MEAT? LOOK NO FURTHER BECAUSE WE GOT THE
+      BEST MEATS AND CHEESES IN TOWN!
+    </p>
+    <h4>Ingredients</h4>
     <ul>
       <li>Meat</li>
       <li>Onion and Garlic</li>
@@ -19,6 +25,7 @@
       <li>Cheeses</li>
       <li>Eggs</li>
     </ul>
+    <h4>Recipe Instructions</h4>
     <ol>
       <li>Make the meat sauce.</li>
       <li>Cook the noodles.</li>
