--- a/recipes/pizza-bagel.html
+++ b/recipes/pizza-bagel.html
@@ -9,6 +9,13 @@
   <body>
     <h1>Pizza Bagels</h1>
     <img src="./Pizza-Bagels.jpg" />
+    <h3>My kids say it the greatest burn of their life!</h3>
+    <p>
+      You ever gobble up a scorching hot pizza bagel so fast and the only way to
+      stop the pain is keep munching while make a murflmurfle sound? LOOK NO
+      FURTHER!
+    </p>
+    <h4>Ingredients</h4>
     <ul>
       <li>8 mini bagels, split</li>
 
@@ -18,6 +25,7 @@
 
       <li>16 slices turkey pepperoni (such as Hormel®)</li>
     </ul>
+    <h4>Recipe Instructions</h4>
     <ol>
       <li>
         Preheat oven to 425 degrees F (220 degrees C). Line a baking sheet with
